--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="flex flex-col items-center space-y-4">
             <h2 class="text-xl font-bold">Book an Appointment</h2>
             <h3>พัฒนาโดย นายวัฒนชาต ทัศนศร</h3>
+            <h4>โรงเรียนวัดศรีวารีน้อย</h4>
+                        
             <a href="./search/" class="text-blue-500 hover:underline">Search Your Booking</a>
         </div>
         <form id="booking-form" class="space-y-3">
